# analysis_template

./: CMakeLists.txt  README.md
lists/: REAL_AuAu@123_v4.list
src/: analyse.cc  analysis_task.cc  analysis_task.h
